--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 <body>
   <main class="container-fluid">
 
-    <h1>JavaScript for interactive apps!</h1>
+    <h1>Task Estimator</h1>
     <h3>Right-click / Inspect, then select console</h3>
 
     <p>Enter your name:
-      <input id="guest" type="text" value="Eden">
+      <input id="guest" type="text" value="">
     </p>
 
-    <p>Enter first number:
-      <input id="firstNumber" type="number" value="7">
+    <p>Enter no of stories:
+      <input id="stories" type="number" value="">
     </p>
 
-    <p>Enter second number:
-      <input id="secondNumber" type="number" value="12">
+    <p>Enter avgtasks:
+      <input id="avgtasks" type="number" value="">
     </p>
 
     <button id="clicker" class="btn btn-primary">Click me!</button>
@@ -41,20 +41,20 @@
 
     console.log('Declare testable functions.....................')
 
-    function add(x, y) {
-      return x + y
+    function multiply(x, y) {
+      return x * y
     }
-    console.log('Defined add=' + add)
+    console.log('Defined  multiply=' + multiply)
 
     console.log('Declare event listeners .......................')
 
     document.getElementById('clicker').addEventListener('click', function () {
       const s = document.getElementById('guest').value
-      const i = parseInt(document.getElementById('firstNumber').value)
+      const i = parseInt(document.getElementById('stories').value)
       console.log('i=' + i)
-      const j = parseInt(document.getElementById('secondNumber').value)
+      const j = parseInt(document.getElementById('avgtasks').value)
       console.log('j=' + j)
-      const ans = s + ', your sum is ' + add(i, j) + '.'
+      const ans = s + ', your result is ' + multiply(i, j) + '.'
       document.getElementById('result').innerHTML = ans
     })
 
